; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/gordon/extr_gordon.c_comma_reset.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/gordon/extr_gordon.c_comma_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@comma_state = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@KC_COMMA = common dso_local global i32 0, align 4
@KC_CALCULATOR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @comma_reset(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @comma_state, i32 0, i32 0), align 4
  switch i32 %5, label %19 [
    i32 130, label %6
    i32 131, label %9
    i32 132, label %11
    i32 133, label %12
    i32 128, label %14
    i32 129, label %17
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* @KC_COMMA, align 4
  %8 = call i32 @unregister_code(i32 %7)
  br label %19

9:                                                ; preds = %2
  %10 = call i32 @layer_off(i32 1)
  br label %19

11:                                               ; preds = %2
  br label %19

12:                                               ; preds = %2
  %13 = call i32 @layer_off(i32 2)
  br label %19

14:                                               ; preds = %2
  %15 = load i32, i32* @KC_CALCULATOR, align 4
  %16 = call i32 @unregister_code(i32 %15)
  br label %19

17:                                               ; preds = %2
  %18 = call i32 @layer_off(i32 3)
  br label %19

19:                                               ; preds = %17, %2, %14, %12, %11, %9, %6
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @comma_state, i32 0, i32 0), align 4
  ret void
}

declare dso_local i32 @unregister_code(i32) #1

declare dso_local i32 @layer_off(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
